--- a/modules/weko-items-ui/weko_items_ui/templates/weko_items_ui/edit.html
+++ b/modules/weko-items-ui/weko_items_ui/templates/weko_items_ui/edit.html
@@ -101,14 +101,14 @@
             <div class="row" ng-hide="false">
               <div class="col-sm-9" ng-show="true">
                 <ul class="list-inline text-right">
-                  <li>
+                 <!-- <li>
                       <button ng-disabled="recordsVM.invenioRecordsLoading"
                           class="btn btn-info next-button" ng-click="updateDataJson()">
                               {{_('Next')}}
                               <span class="glyphicon glyphicon-chevron-right"></span>
                       </button>
                   </li>
-                  <input type="hidden" id="next-frame" value="r">
+                  <input type="hidden" id="next-frame" value="r">-->
                   {%- if pid %}
                   <li>
                       <button ng-disabled="recordsVM.invenioRecordsLoading"
@@ -119,6 +119,14 @@
                       </button>
                   </li>
                   {%- endif %}
+                   <li>
+                         <button ng-disabled="recordsVM.invenioRecordsLoading"
+                              class="btn btn-info next-button" ng-click="updateDataJson()">
+                                  {{_('Next')}}
+                                  <span class="glyphicon glyphicon-chevron-right"></span>
+                         </button>
+                      </li>
+                      <input type="hidden" id="next-frame" value="r">
                 </ul>
               </div>
             </div>
@@ -216,13 +224,13 @@
               <div class="row" ng-hide="false">
                 <div class="col-sm-9" ng-show="true">
                   <ul class="list-inline text-right">
-                    <li>
+                   <!-- <li>
                          <button ng-disabled="recordsVM.invenioRecordsLoading"
                              class="btn btn-info next-button" ng-click="updateDataJson()">
                                 {{_('Next')}}
                                 <span class="glyphicon glyphicon-chevron-right"></span>
                          </button>
-                   </li>
+                   </li>-->
                     {%- if pid %}
                     <li>
                         <button ng-disabled="recordsVM.invenioRecordsLoading"
@@ -233,6 +241,13 @@
                         </button>
                     </li>
                     {%- endif %}
+                      <li>
+                             <button ng-disabled="recordsVM.invenioRecordsLoading"
+                                 class="btn btn-info next-button" ng-click="updateDataJson()">
+                                    {{_('Next')}}
+                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                             </button>
+                      </li>
                   </ul>
                 </div>
               </div>
