--- a/modules/weko-items-ui/weko_items_ui/templates/weko_items_ui/iframe/item_edit.html
+++ b/modules/weko-items-ui/weko_items_ui/templates/weko_items_ui/iframe/item_edit.html
@@ -242,10 +242,32 @@
     </div>
   </div>
 </div>
-<div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+<!--<div class="modal fade" tabindex="-1" role="dialog" id="myModal">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-body">
+        <app-author-search></app-author-search>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info close-button" id="btnModalClose" data-dismiss="modal">
+             <span class="glyphicon glyphicon-remove"></span>
+                 {{_('Close')}}
+        </button>
+      </div>-->
+   <!-- </div> /.modal-content -->
+  <!--  </div> /.modal-dialog -->
+<!-- </div> /.modal -->
+<div class="modal fade" tabindex="-1" role="dialog" id="myModal" aria-labelledby="updateHeader"
+             aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document" style="display: table; width: auto;">
+    <div class="modal-content">
+      <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+             <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">WEKO</h4>
+      </div>
+      <div class="modal-body" style="overflow-x: auto;">
         <app-author-search></app-author-search>
       </div>
       <div class="modal-footer">
@@ -257,10 +279,18 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-<div class="modal fade" tabindex="-1" role="dialog" id="meta-search">
-  <div class="modal-dialog modal-lg" role="document">
+
+<div class="modal fade" tabindex="-1" role="dialog" id="meta-search" aria-labelledby="updateHeader"
+             aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document" style="display: table; width: auto;">
     <div class="modal-content">
-      <div class="modal-body">
+       <div class="modal-header">
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+               <span aria-hidden="true">&times;</span>
+           </button>
+           <h4 class="modal-title">WEKO</h4>
+       </div>
+      <div class="modal-body" style="overflow-x: auto;">
         <div id="meta-search-body"></div>
         <input type="hidden" id="autofill_item_type_id" name="autofill_item_type_id" value="{{id}}">
         <input type="hidden" id="autofill_error_id" name="autofill_item_type_id" value="{{_('Please select the ID.')}}">
@@ -281,5 +311,30 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+<!--<div class="modal fade" tabindex="-1" role="dialog" id="meta-search">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div id="meta-search-body"></div>
+        <input type="hidden" id="autofill_item_type_id" name="autofill_item_type_id" value="{{id}}">
+        <input type="hidden" id="autofill_error_id" name="autofill_item_type_id" value="{{_('Please select the ID.')}}">
+        <input type="hidden" id="autofill_error_input_value" name="autofill_item_type_id" value="{{_('Please input value.')}}">
+        <input type="hidden" id="autofill_error_doi" name="autofill_item_type_id" value="{{_('Specified ID does not exist.')}}">
+        <input type="hidden" id="autofill_header_name"
+        name="autofill_header_name" value="{{_('Automatic metadata input')}}">
+        <input type="hidden" id="autofill_select_meta"
+        name="autofill_select_meta">
+        <input type="hidden" id="autofill_get_value" name="autofill_get_value" value="{{_('Get')}}">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info close-button" id="meta-search-close" data-dismiss="modal">
+               <span class="glyphicon glyphicon-remove"></span>
+                   {{_('Close')}}
+        </button>
+      </div>-->
+<!--    </div> /.modal-content -->
+<!--  </div> /.modal-dialog -->
+<!--</div> /.modal -->
 
 {%- endblock page_body %}
