--- a/modules/weko-search-ui/weko_search_ui/templates/weko_search_ui/bulk_delete_display.html
+++ b/modules/weko-search-ui/weko_search_ui/templates/weko_search_ui/bulk_delete_display.html
@@ -90,7 +90,10 @@
               <div class="modal-footer">
                 <button type="button" class="btn btn-primary action-button" id="bulk_delete_confirmation_continue">{{_('Continue')}}
                 </button>
-                <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">{{_('Cancel')}}</button>
+                <button type="button" class="btn btn-info cancel-button" data-dismiss="modal">
+                  <span class="glyphicon glyphicon-remove"></span>    
+                    {{_('Cancel')}}
+                </button>
               </div>
             </div>
           </div>
