--- a/modules/weko-admin/weko_admin/templates/weko_admin/search_management.html
+++ b/modules/weko-admin/weko_admin/templates/weko_admin/search_management.html
@@ -209,12 +209,54 @@
       </div>
     </div>
     <div class="form-group">
-      <button type="button" class="btn btn-primary pull-right save-button" ng-click="saveData()">
-        <!--<span class="glyphicon glyphicon-save"></span>-->
+      <button type="button" class="btn btn-primary pull-right save-button" data-toggle="modal" ng-click="saveData()">
         <span class="glyphicon glyphicon-download-alt"></span>
         {{_('Save')}}
       </button>
     </div>
+<!--Model-->
+<!--   <div id="myModel" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="updateHeader" aria-hidden="true">          
+    <div class="modal-dialog modal-dialog-centered" role="document"
+        style="display: table; width: 500px;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                 <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">{{_('WEKO')}}</h4>
+            </div>
+            <div class="modal-body" style="overflow-x: auto;">
+                <!-- <span class="glyphicon glyphicon-ok fa-3x" style="vertical-align: middle; margin: 0 10px"></span>
+                <p>One fine body&hellip;</p>-->
+          <!--  </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">{{_('Cancel')}}</button>
+            </div>
+        </div>
+    </div>
+</div>--> <!--Model-->
   </div>
 </div>
+<!--Model-->
+    <div id="myModel" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="updateHeader" aria-hidden="true">
+     <div class="modal-dialog modal-dialog-centered" role="document"
+         style="display: table; width: 500px;">
+         <div class="modal-content">
+             <div class="modal-header">
+                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                 </button>
+                 <h4 class="modal-title">{{_('WEKO')}}</h4>
+             </div>
+             <div class="modal-body" style="overflow-x: auto;">
+                 <span class="glyphicon glyphicon-ok fa-3x" style="vertical-align: middle; margin: 0 10px"></span>
+                 <p>One fine body&hellip;</p>
+             </div>
+             <div class="modal-footer">
+                 <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">{{_('Cancel')}}</button>
+             </div>
+         </div>
+     </div>
+ </div><!--Model-->
+
 {%- endblock page_body_main %}
