--- a/modules/weko-theme/weko_theme/templates/weko_theme/base.html
+++ b/modules/weko-theme/weko_theme/templates/weko_theme/base.html
@@ -20,10 +20,14 @@
 <!DOCTYPE html>
 <html {% if html_css_classes %} class="{{ html_css_classes|join(' ') }}"{% endif %} lang="{{ current_i18n.locale.language|safe }}" dir="{{ current_i18n.locale.text_direction }}">
   <head>
+   <!-- <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">-->
+
     {%- block head %}
     {%- block head_meta %}
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {%- if google_scholar_meta %}
         {%- for metadata in google_scholar_meta %}
