--- a/modules/weko-theme/weko_theme/templates/weko_theme/header.html
+++ b/modules/weko-theme/weko_theme/templates/weko_theme/header.html
@@ -25,6 +25,7 @@
 {% endblock %}
 
 <header id="header">
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=11">-->
   {%- block navbar %}
   <nav class="navbar navbar-default navbar-static-top">
     <div class="container-fluid">
