--- a/modules/weko-indextree-journal/weko_indextree_journal/templates/weko_indextree_journal/index.html
+++ b/modules/weko-indextree-journal/weko_indextree_journal/templates/weko_indextree_journal/index.html
@@ -120,4 +120,8 @@
     </fieldset>
   </div>
 </div>
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock page_body_main %}
