--- a/modules/weko-items-ui/weko_items_ui/templates/weko_items_ui/item_index.html
+++ b/modules/weko-items-ui/weko_items_ui/templates/weko_items_ui/item_index.html
@@ -44,4 +44,8 @@
     <div class="hide" id="post_error_url"></div>
     <app-root-tree></app-root-tree>
   </div>
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock page_body_main %}
