--- a/modules/weko-workflow/weko_workflow/templates/weko_workflow/activity_detail.html
+++ b/modules/weko-workflow/weko_workflow/templates/weko_workflow/activity_detail.html
@@ -337,4 +337,8 @@
 <div class="communities">
 </div>
 {%- endif%}
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock page_body %}
