--- a/modules/weko-workflow/weko_workflow/templates/weko_workflow/activity_list.html
+++ b/modules/weko-workflow/weko_workflow/templates/weko_workflow/activity_list.html
@@ -125,6 +125,10 @@
 
   </div>
 </div>
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock page_body_main %}
 
 
