--- a/modules/weko-workflow/weko_workflow/templates/weko_workflow/admin/workflow_detail.html
+++ b/modules/weko-workflow/weko_workflow/templates/weko_workflow/admin/workflow_detail.html
@@ -111,6 +111,10 @@
     </div>
   </div>
 </div>
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock %}
 
 {% block tail %}
