--- a/modules/weko-workflow/weko_workflow/templates/weko_workflow/admin/workflow_list.html
+++ b/modules/weko-workflow/weko_workflow/templates/weko_workflow/admin/workflow_list.html
@@ -62,4 +62,8 @@
     </div>
   </div>
 </div>
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock %}
