--- a/modules/weko-workflow/weko_workflow/templates/weko_workflow/identifier_grant.html
+++ b/modules/weko-workflow/weko_workflow/templates/weko_workflow/identifier_grant.html
@@ -77,4 +77,11 @@
          </button>
     </li>
   </ul>
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 </div>
+
+
+
