--- a/modules/weko-workflow/weko_workflow/templates/weko_workflow/index.html
+++ b/modules/weko-workflow/weko_workflow/templates/weko_workflow/index.html
@@ -27,5 +27,9 @@
 
 {%- block page_body_main %}
 {{_('Welcome to %(module_name)s', module_name=module_name)}}
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock %}
 
