--- a/modules/weko-workflow/weko_workflow/templates/weko_workflow/oapolicy_search.html
+++ b/modules/weko-workflow/weko_workflow/templates/weko_workflow/oapolicy_search.html
@@ -47,3 +47,7 @@
   <div class="hide" id="action-journal"></div>
 </div>
 <br><br><br>
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
