--- a/modules/weko-admin/weko_admin/templates/weko_admin/admin/lang_settings.html
+++ b/modules/weko-admin/weko_admin/templates/weko_admin/admin/lang_settings.html
@@ -33,6 +33,11 @@
 <script src="{{ url_for('static', filename='js/weko_admin/lang_settings.js') }}"></script>
 {%- endblock javascript %}
 
+<!--{%- block page_body -%}
+   {% from "weko_theme/macros/modal_page.html" import all_modal %}
+{%- endblock -%}
+-->
+
 {%- block body %}
 <div class="row">
   <div class="col-sm-12">
@@ -95,26 +100,8 @@
   </div>
 </div>
 
-<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="updateHeader" aria-hidden="true">  
-  <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                 <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title">{{_('WEKO')}}</h4>
-            </div>
-            <div class="modal-body" style="overflow-x: auto;">
-                 <span class="glyphicon glyphicon-question-sign fa-3x" style="vertical-align: middle; margin: 0 10px"></span>
-                 <p>One fine body&hellip;</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">{{_('Cancel')}}</button>
-            </div>
-        </div>
-    </div>
-</div>
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
 
 {%- endblock body %}
-
 
