--- a/modules/weko-gridlayout/weko_gridlayout/templates/weko_gridlayout/admin/widget_design.html
+++ b/modules/weko-gridlayout/weko_gridlayout/templates/weko_gridlayout/admin/widget_design.html
@@ -35,4 +35,8 @@
 
 {%- block body %}
 <div id="root" class="col-xs-12"></div>
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {% endblock %}
