--- a/modules/weko-items-ui/weko_items_ui/templates/weko_items_ui/edit.html
+++ b/modules/weko-items-ui/weko_items_ui/templates/weko_items_ui/edit.html
@@ -301,4 +301,7 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock page_body %}
