--- a/modules/weko-itemtypes-ui/weko_itemtypes_ui/templates/weko_itemtypes_ui/create_itemtype.html
+++ b/modules/weko-itemtypes-ui/weko_itemtypes_ui/templates/weko_itemtypes_ui/create_itemtype.html
@@ -254,5 +254,9 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock page_body %}
 
