--- a/modules/weko-search-ui/weko_search_ui/templates/weko_search_ui/bulk_delete_display.html
+++ b/modules/weko-search-ui/weko_search_ui/templates/weko_search_ui/bulk_delete_display.html
@@ -101,6 +101,24 @@
       </div>
     </div>
   </div>
+<div id="allModal" class="modal fade"  tabindex="-1" role="dialog" aria-labelledby="updateHeader" aria-hidden="true">
+   <div class="modal-dialog modal-dialog-centered" role="document" style="display: table; width: 300px;">
+         <div class="modal-content">
+             <div class="modal-header">
+                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                 </button>
+                 <h4 class="modal-title">{{_('WEKO')}}</h4>
+             </div>
+             <div class="modal-body">
+                  <p id="inputModal">One fine body&hellip;</p>
+             </div>
+             <div class="modal-footer">
+                 <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">{{_('Cancel')}}</    button>
+             </div>
+         </div>
+     </div>
+</div>
   </invenio-search>
 </div>
 
