--- a/modules/weko-workflow/weko_workflow/templates/weko_workflow/workflow_list.html
+++ b/modules/weko-workflow/weko_workflow/templates/weko_workflow/workflow_list.html
@@ -113,4 +113,8 @@
        </a>
   </div>
 </div>
+
+{% from "weko_theme/macros/modal_page.html" import all_modal %}
+{{ all_modal() }}
+
 {%- endblock page_body_main %}
